--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+version 3.1
+* Code is prepared for use of the new features.
+  From version 3.2 will be possible use local storage for image
+  files and database querying. New functions in develop:
+  - '#eibox' for create boxes positioned on a wiki page (the content can use be in the wikitext code)
+  - '#eimg' replace '<img ... />' element and can do set percentual size of image (in progress)
+
 version 3.0
 * Fix for MediaWiki >= 1.34+ by Aleš Kapica (User:Want)
 * New functions for substitution of the unmaintained extensions:
