--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+version 3.5
+* EImageBOX support clip on background
+  - accept new attribue padding
+* Special:EImagePages use function #eibox
+
 version 3.4
 * Cache tables 'ei_cache' & 'ei_pages'
 * Supported source file formats:
